WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48621
[V8] The DateExtension cannot handle overwritten Date
https://bugs.webkit.org/show_bug.cgi?id=48621
Summary
[V8] The DateExtension cannot handle overwritten Date
Mads Ager
Reported
2010-10-29 02:25:38 PDT
The DateExtension code cannot handle if the Date object is overwritten with a non-object value.
Attachments
Patch
(4.37 KB, patch)
2010-10-29 04:42 PDT
,
Mads Ager
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mads Ager
Comment 1
2010-10-29 04:42:40 PDT
Created
attachment 72315
[details]
Patch
Mads Ager
Comment 2
2010-10-29 04:51:57 PDT
Committed
r70862
: <
http://trac.webkit.org/changeset/70862
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug