2010-10-29  Mads Ager  <ager@chromium.org>

Reviewed by Pavel Feldman.

        [V8] The DateExtension cannot handle overwritten Date
        https://bugs.webkit.org/show_bug.cgi?id=48621

        Check that the Date property is an object before attempting to get
        hidden properties from it.

        Test: fast/dom/Window/slow-unload-handler-overwritten-date.html

        * bindings/v8/DateExtension.cpp:
        (WebCore::DateExtension::setAllowSleep):
2010-10-29  Mads Ager  <ager@chromium.org>

        Reviewed by Pavel Feldman.

        [V8] The DateExtension cannot handle overwritten Date
        https://bugs.webkit.org/show_bug.cgi?id=48621

        * fast/dom/Window/resources/slow-unload-handler-overwritten-date1.html: Added.
        * fast/dom/Window/slow-unload-handler-overwritten-date-expected.txt: Added.
        * fast/dom/Window/slow-unload-handler-overwritten-date.html: Added.


Canonical link: https://commits.webkit.org/61371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70862 268f45cc-cd09-0410-ab3c-d52691b4dbfc